# pymediainfo

./: .pre-commit-config.yaml  appveyor.yml  pyproject.toml  tox.ini
.github/workflows/: check.yaml  release.yaml
docs/: conf.py  pymediainfo.rst  requirements.txt
scripts/: demo.py  download_library.py  mediainfo_config.py  tag_pure_wheels.py  update_checksums.py
src/pymediainfo/: __init__.py
tests/: test_pymediainfo.py
tests/data/: invalid.xml
